# mattflow

./: .clang-format  .gitattributes  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  conanfile.txt  link-compile-cmds.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: cmake-integration.yml
cli/: exit_codes.h  main.cpp  parse.cpp  parse.h  profile.cpp  profile.h
docs/: grammar.txt
include/: compat.h  constants.h  debug.h  decorators.h  identifier.h  number.h  source.h  stdafx.h  type.h
include/ast/: ast.h  debug.h  link.h  node.h  node_properties.h  operator.h  parse.h  single_token.h  state.h
include/ast/node/: control_flow.h  expression.h  function.h  node.h  node_properties.h  number.h  operator.h  primary.h  string.h  struct.h  type.h  variable.h
include/ast/parse/: link.h  parse.h  single_token.h  state.h
include/ast/visitor/: operator.h  type.h
include/backend/: llvm.h
include/lex/: atom.h  lexer.h  token.h  token_type.h
include/literal/: identifier.h  number.h  string.h
include/llvm/: ir.h
include/type/: function.h  intrinsic.h  number.h  primitive.h  struct.h  type.h
include/variable/: scope.h
src/: identifier.cpp  main.cpp  number.cpp  source.cpp  type.cpp
src/ast/: link.cpp  parse.cpp  state.cpp
src/ast/parse/: link.cpp  parse.cpp  state.cpp
src/backend/: llvm.cpp
src/lex/: atom.cpp  lexer.cpp  token.cpp
src/literal/: number.cpp  string.cpp
src/llvm/: ir.cpp
src/type/: number.cpp  primitive.cpp
test/: main.cpp
test/reference/: general_syntax.mf  hello_world.mf  maths.mf  operator.mf  struct.mf
test/samples/: general_syntax.mf  hello_world.mf  maths.mf  operator.mf  primary.mf  test_parser.mf
test/samples/control_flow/: for_expr.mf  for_if_compound_expr.mf  for_multiple_range_expr.mf  for_where_expr.mf  if_compound_expr.mf  if_else_expr.mf  if_expr.mf  if_expr_assign.mf  while_expr.mf  while_if_compound_expr.mf
test/samples/expr/: assignment_with_infix.mf  assignment_wth_deduced_type.mf  assignment_wth_type.mf  block_expr.mf  block_expr_with_infix.mf  multiple_assignment.mf  multiple_assignment_with_infix.mf
test/samples/failure/: if_compound_expr.mf  multiple_expr_in_parentheses.mf
test/samples/infix/: combination.mf  nested_parentheses.mf  parentheses.mf  power.mf
test/samples/literal/: string_containing_and_following_infix.mf  string_containing_infix.mf
test/samples/profile/: 15k_infix.mf  1k_infix.mf  30k_infix.mf  3k_infix.mf  60k_infix.mf  7k_infix.mf
test/samples/type/: function_type.mf  function_type_assign.mf  function_value.mf  function_value_deduced_type.mf  struct.mf  struct_type_assign.mf
test/validation/control_flow/: for_expr.dot  for_expr.token  for_if_compound_expr.dot  for_if_compound_expr.token  for_multiple_range_expr.dot  for_multiple_range_expr.token  for_where_expr.dot  for_where_expr.token  if_compound_expr.dot  if_compound_expr.token  if_else_expr.dot  if_else_expr.token  if_expr.dot  if_expr.token  if_expr_assign.dot  if_expr_assign.token  while_expr.dot  while_expr.token  while_if_compound_expr.dot  while_if_compound_expr.token
test/validation/expr/: assignment.dot  assignment.token  assignment_with_infix.dot  assignment_with_infix.token  assignment_wth_deduced_type.dot  assignment_wth_deduced_type.token  assignment_wth_type.dot  assignment_wth_type.token  block_expr.dot  block_expr.token  block_expr_with_infix.dot  block_expr_with_infix.token  multiple_assignment.dot  multiple_assignment.token  multiple_assignment_with_infix.dot  multiple_assignment_with_infix.token
test/validation/failure/: if_compound_expr.dot  if_compound_expr.token  multiple_expr_in_parentheses.dot  multiple_expr_in_parentheses.token
test/validation/infix/: addition.dot  addition.token  combination.dot  combination.token  multiplication.dot  multiplication.token  nested_parentheses.dot  nested_parentheses.token  parentheses.dot  parentheses.token  power.dot  power.token
test/validation/literal/: string.dot  string.token  string_containing_and_following_infix.dot  string_containing_and_following_infix.token  string_containing_infix.dot  string_modifier.dot  string_modifier.token
test/validation/type/: function_type.dot  function_type.token  function_type_assign.dot  function_type_assign.token  function_value.dot  function_value.token  function_value_deduced_type.dot  function_value_deduced_type.token  struct.dot  struct.token  struct_type_assign.dot  struct_type_assign.token
